manifests/showks-form/manifest.yaml
---
# Source: showks-form/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-form-temp
  namespace: showks
  labels:
    app: showks-form-temp
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: app-port
  selector:
    app: showks-form-temp
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: showks
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql

---
# Source: showks-form/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-form-temp
  namespace: showks
  labels:
    app: showks-form-temp
spec:
  replicas: 
  selector:
    matchLabels:
      app: showks-form-temp
  template:
    metadata:
      labels:
        app: showks-form-temp
    spec:
      containers:
        - name: showks-form-temp
          image: gcr.io/ipc-containerdays/showks-form:stg-efa03da178eacb46df63613cacad30246426342f
          ports:
            - name: app-port
              containerPort: 3000
              protocol: TCP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-form-temp
  labels:
    app: showks-form-temp
  namespace: showks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: showks-form-temp
  template:
    metadata:
      labels:
        app: showks-form-temp
    spec:
      containers:
      - name: showks-form-temp
        image: gcr.io/ipc-containerdays/showks-form:stg-efa03da178eacb46df63613cacad30246426342f
        lifecycle:
          postStart:
            exec:
              command:
                - /usr/src/showks-form/post-start.sh
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: showks
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args: ["--ignore-db-dir=lost+found"]
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysqld-config
          mountPath: /etc/mysql/mysql.conf.d/
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysqld-config
        configMap:
          name: mysqld-config
