manifests/showks-form/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-form
  namespace: showks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-form-service"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - form.stg.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: form.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-form-service
          servicePort: 3000
